[package]
name = "yabai"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["yabai"]
categories = ["api-bindings", "command-line-utilities"]
description = "A Rust library for communicating with the yabai tiling window manager."
repository = "https://github.com/sudosilico/yabai.rs/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
serde_json = "1.0"
anyhow = "1.0"
byteorder = "1.4.3"
thiserror = "1.0.40"
lazy_static = "1.4.0"
